{
  "version": 4,
  "terraform_version": "0.14.9",
  "serial": 20,
  "lineage": "fbaf1738-4d7c-b34b-ef6f-bb3057bd64f8",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-042e8287309f5df03",
            "arn": "arn:aws:ec2:us-east-1:779860661651:instance/i-0cdc83f4d926c4267",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0cdc83f4d926c4267",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "deploy_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-03de3268c0560fa1c",
            "private_dns": "ip-10-0-1-58.ec2.internal",
            "private_ip": "10.0.1.58",
            "public_ip": "3.239.228.238",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0c19b5837b9d3f47d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0939c983a040b8e77",
            "tags": {
              "Name": "bastion_server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-013c5e2394a7cd312"
            ]
          },
          "dependencies": [
            "aws_key_pair.deploy_key",
            "aws_security_group.public_security_group",
            "aws_subnet.public1",
            "aws_vpc.iti"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-042e8287309f5df03",
            "arn": "arn:aws:ec2:us-east-1:779860661651:instance/i-02ecaa6f6bb9f3016",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02ecaa6f6bb9f3016",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "deploy_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-01cb96e81f009af0d",
            "private_dns": "ip-10-0-1-160.ec2.internal",
            "private_ip": "10.0.1.160",
            "public_ip": "3.239.241.210",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-096fc04d17e1b2978",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0939c983a040b8e77",
            "tags": {
              "Name": "nginx_sever"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-07d2b5b7906624788"
            ]
          },
          "dependencies": [
            "aws_key_pair.deploy_key",
            "aws_security_group.private_security_group",
            "aws_subnet.public1",
            "aws_vpc.iti"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "iti",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:779860661651:internet-gateway/igw-06b926776b73e0c92",
            "id": "igw-06b926776b73e0c92",
            "owner_id": "779860661651",
            "tags": {
              "Name": "iti"
            },
            "vpc_id": "vpc-021e6bd4a70720c0b"
          },
          "dependencies": [
            "aws_vpc.iti"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-06b926776b73e0c92",
            "id": "r-rtb-05a96d74c938516b91080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-05a96d74c938516b9",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.iti",
            "aws_route_table.private",
            "aws_vpc.iti"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-06b926776b73e0c92",
            "id": "r-rtb-0cec4fcf714b5ac871080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0cec4fcf714b5ac87",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.iti",
            "aws_route_table.public",
            "aws_vpc.iti"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:779860661651:route-table/rtb-05a96d74c938516b9",
            "id": "rtb-05a96d74c938516b9",
            "owner_id": "779860661651",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "private"
            },
            "vpc_id": "vpc-021e6bd4a70720c0b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.iti"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:779860661651:route-table/rtb-0cec4fcf714b5ac87",
            "id": "rtb-0cec4fcf714b5ac87",
            "owner_id": "779860661651",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "public"
            },
            "vpc_id": "vpc-021e6bd4a70720c0b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.iti"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0383fe5ba4e71e0bf",
            "route_table_id": "rtb-05a96d74c938516b9",
            "subnet_id": "subnet-03521ea03ca188a9b"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private1",
            "aws_vpc.iti"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-025b03ee2705606e3",
            "route_table_id": "rtb-05a96d74c938516b9",
            "subnet_id": "subnet-0ce47659ac48db559"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private2",
            "aws_vpc.iti"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07e8eefd3092aafad",
            "route_table_id": "rtb-0cec4fcf714b5ac87",
            "subnet_id": "subnet-0939c983a040b8e77"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public1",
            "aws_vpc.iti"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0983d4725d9acfee8",
            "route_table_id": "rtb-0cec4fcf714b5ac87",
            "subnet_id": "subnet-0c35c1728a886bf96"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public2",
            "aws_vpc.iti"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:779860661651:security-group/sg-07d2b5b7906624788",
            "description": "Allow ssh traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07d2b5b7906624788",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "ssh from my machine",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "to Web",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "private",
            "name_prefix": "",
            "owner_id": "779860661651",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "private"
            },
            "timeouts": null,
            "vpc_id": "vpc-021e6bd4a70720c0b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.iti"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:779860661651:security-group/sg-013c5e2394a7cd312",
            "description": "Allow ssh traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-013c5e2394a7cd312",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "ssh from my machine",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "public",
            "name_prefix": "",
            "owner_id": "779860661651",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "public"
            },
            "timeouts": null,
            "vpc_id": "vpc-021e6bd4a70720c0b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.iti"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:779860661651:subnet/subnet-03521ea03ca188a9b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-03521ea03ca188a9b",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "779860661651",
            "tags": {
              "Name": "private1"
            },
            "tags_all": {
              "Name": "private1"
            },
            "vpc_id": "vpc-021e6bd4a70720c0b"
          },
          "dependencies": [
            "aws_vpc.iti"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:779860661651:subnet/subnet-0ce47659ac48db559",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-0ce47659ac48db559",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "779860661651",
            "tags": {
              "Name": "private2"
            },
            "tags_all": {
              "Name": "private2"
            },
            "vpc_id": "vpc-021e6bd4a70720c0b"
          },
          "dependencies": [
            "aws_vpc.iti"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:779860661651:subnet/subnet-0939c983a040b8e77",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0939c983a040b8e77",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "779860661651",
            "tags": {
              "Name": "public1"
            },
            "tags_all": {
              "Name": "public1"
            },
            "vpc_id": "vpc-021e6bd4a70720c0b"
          },
          "dependencies": [
            "aws_vpc.iti"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:779860661651:subnet/subnet-0c35c1728a886bf96",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0c35c1728a886bf96",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "779860661651",
            "tags": {
              "Name": "public2"
            },
            "tags_all": {
              "Name": "public2"
            },
            "vpc_id": "vpc-021e6bd4a70720c0b"
          },
          "dependencies": [
            "aws_vpc.iti"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "iti",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:779860661651:vpc/vpc-021e6bd4a70720c0b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ad3cadbb9c7df630",
            "default_route_table_id": "rtb-01d4ae770fc80b40b",
            "default_security_group_id": "sg-0dd07afc1c9dcf678",
            "dhcp_options_id": "dopt-6b85a311",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-021e6bd4a70720c0b",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-01d4ae770fc80b40b",
            "owner_id": "779860661651",
            "tags": {
              "Name": "iti"
            },
            "tags_all": {
              "Name": "iti"
            }
          }
        }
      ]
    }
  ]
}